# llm-twin

./: .gitignore  README.md  cleaned_documents.py  create_instruction_dataset.py  llm-twin.ipynb  pyproject.toml
configs/: digital_data_etl_paul_iusztin.yaml  end_to_end_data.yaml  feature_engineering.yaml
llm_engineering/: settings.py
llm_engineering/application/crawlers/: __init__.py  base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py  twitter.py
llm_engineering/application/preprocessing/: cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/rag/: query_expansion.py  retriever.py  self_query.py
llm_engineering/application/utils/: __init__.py  misc.py  split_user_full_name.py
llm_engineering/domain/: __init__.py  cleaned_documents.py  documents.py  types.py
llm_engineering/domain/base/: nosql.py
llm_engineering/infrastructure/: inference_pipeline_api.py
llm_engineering/infrastructure/db/: mongo.py
llm_engineering/model/evaluation/: evaluate.ipynb
llm_engineering/model/finetuning/: cleaned_documents.py  create_instruction_dataset.py  create_preference_dataset.py  finetune.ipynb
llm_engineering/model/inference/: inference.py  run.py
pipelines/: __init__.py  digital_data_etl.py  end_to_end_data.py  feature_engineering.py
steps/etl/: __init__.py  crawl_links.py  get_or_create_user.py
steps/feature_engineering/: load_to_vector_db.py  query_data_warehouse.py
tools/: run.py
