[project]
name = "llm-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromedriver-autoinstaller>=0.6.4",
    "langchain-community>=0.3.29",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "selenium>=4.32.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "zenml>=0.84.3",
]
